k8s/deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: discoordinator-live
  namespace: ${NAMESPACE}
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: discoordinator-live
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: discoordinator-live
  namespace: ${NAMESPACE}
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
    - hosts:
        - discoordinator.sch.bme.hu
      secretName: discoordinator-live-cert
  rules:
    - host: discoordinator.sch.bme.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discoordinator-live
                port:
                  number: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: discoordinator-live
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discoordinator-live
  template:
    metadata:
      labels:
        app: discoordinator-live
    spec:
      volumes:
        - name: discoordinator-live
          persistentVolumeClaim:
            claimName: discoordinator-live
      containers:
        - name: discoordinator-live
          image: harbor.sch.bme.hu/org-golyakorte/discoordinator:latest
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: discoordinator-live
              mountPath: /pv
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
